# routix

./: .env-sample  Cargo.toml  Dockerfile  LICENCE  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
migrations/2026-03-05-233018-0000_init/: down.sql  up.sql
src/: context.rs  init.rs  main.rs  roles.rs  scopes.rs
src/api/: config.rs  middleware.rs  mod.rs
src/api/endpoints/: login.rs  mod.rs  utils.rs
src/api/endpoints/access_list/: create.rs  delete.rs  get_all.rs  update.rs
src/api/endpoints/certificate/: create.rs  delete.rs  get_all.rs  mod.rs  request.rs  upload.rs
src/api/endpoints/proxy_host/: create.rs  delete.rs  get_all.rs  mod.rs  update.rs  utils.rs
src/api/endpoints/upstream/: create.rs  delete.rs  get_all.rs  mod.rs  update.rs
src/api/endpoints/user/: create.rs  mod.rs  update.rs
src/cert/: authority.rs  mod.rs
src/cert/dns_providers/: mod.rs
src/cert/dns_providers/cloudflare/: config.rs  mod.rs
src/database/: config.rs  mod.rs  models.rs  schema.rs
src/database/models/: access_list.rs  access_list_rule.rs  certificate.rs  mod.rs  proxy_host.rs  proxy_host_upstream.rs  remote_host.rs  upstream.rs  user.rs
src/database/repos/: access_lists.rs  certificates.rs  error.rs  mod.rs  proxy_host_upstreams.rs  proxy_hosts.rs  upstreams.rs  users.rs
src/jwt/: claims.rs  config.rs  error.rs  mod.rs
src/proxy/: accees_list.rs  hosts_manager.rs  mod.rs  proxy_host.rs  proxy_impl.rs  tls_resolver.rs  upstream.rs
src/repos/: certificates.rs  error.rs  mod.rs  users.rs
src/tls/: certificate.rs  config.rs  encryptor.rs  mod.rs
