[package]
name = "routix"
version = "0.1.0"
edition = "2024"
authors = ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/antoncxx/routix"
license = "MIT"

[dependencies]
axum = "0.8"
env_logger = "0.11"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
log = "0.4"
pingora = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.50"
tower-http = "0.6"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
bcrypt = "0.19.0"
