[package]
name = "routix"
version = "0.1.0"
edition = "2024"
authors = ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/antoncxx/routix"
license = "MIT"

[dependencies]
axum = "0.8"
env_logger = "0.11"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
log = "0.4"
pingora = {version = "0.8", features = ["proxy", "openssl"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.50"
tower-http = "0.6"
diesel = { version = "2.3", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
bcrypt = {version = "0.19", features = ["std"]}
diesel_migrations = "2.3"
pingora-openssl = "0.8"
openssl = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
async-trait = "0.1"
instant-acme = { version = "0.8", features = ["hyper-rustls"] }
rcgen = "0.14"
reqwest = { version = "0.13", features = ["json", "query"] }
serde_json = "1"
anyhow = "1.0"
